force-app/main/default/objects/Candidate_Answer__c/Candidate_Answer__c.object-meta.xml
<CustomObject>
    <label>Candidate Answer</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>