force-app/main/default/objects/Candidate_Answer__c/fields/Screening_Question__c.field-meta.xml
<CustomField>
    <fullName>Screening_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screening Question</label>
    <referenceTo>Screening_Question__c</referenceTo>
    <relationshipLabel>Candidate Answers</relationshipLabel>
    <relationshipName>Candidate_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>